--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,13 @@
-
+#--for DATABASE Connectivity
+spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
+spring.datasource.url=jdbc:mariadb://localhost:3306/dbstudent?createDatabaseIfNotExist=true
+spring.datasource.username=sa
+spring.datasource.password=sapassword
+#common database settings
+spring.jpa.database-platform = org.hibernate.dialect.MariaDBDialect
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.generate-ddl=true
+spring.security.user.name=sa
+spring.security.user.password=sapassword
+server.error.whitelabel.enabled=false
